# ros2_exercise

assignment1_rt/: package.xml  setup.cfg  setup.py
assignment1_rt/assignment1_rt/: distance_monitor_node.py  user_interface_node.py
assignment2_rt_part2/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
assignment2_rt_part2/assignment2_rt_part2/: robot_controller.py
assignment2_rt_part2/srv/: SetLinearVelocity.srv
turtle_control/: package.xml  setup.py
turtle_control/turtle_control/: pub_sub_node.py  service_node.py
