<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>assignment2_rt_part2</name>
  <version>0.0.0</version>
  <description>A multi-language package with Python and C++ support</description>
  <maintainer email="S6558048@studenti.unige.it">rubin</maintainer>
  <license>TODO: License declaration</license>

  <!-- Python dependencies -->
  <exec_depend>ament_copyright</exec_depend>
  <exec_depend>ament_flake8</exec_depend>
  <exec_depend>ament_pep257</exec_depend>
  <exec_depend>python3-pytest</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
